# Barcode_1D

./: .gitignore  LICENSE  README.md
src/Linux/tencon/: CMakeLists.txt  main.cpp
src/Linux/tencon/gallo/: gallo.cpp  gallo.h
src/Linux/tencon/yun/: yun.cpp  yun.h
src/Win32/tencon/: tencon.sln
src/Win32/tencon/Debug/: tencon.ilk
src/Win32/tencon/tencon/: main.cpp  tencon.vcxproj  tencon.vcxproj.filters
src/Win32/tencon/tencon/Debug/: vc120.idb
src/Win32/tencon/tencon/Debug/tencon.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tencon.lastbuildstate
src/Win32/tencon/tencon/Release/tencon.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tencon.lastbuildstate
src/Win32/tencon/tencon/soros/: soros.cpp  soros.h
src/Win32/tencon/tencon/yun/: yun.cpp  yun.h
